# Upper-Cup

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-win.sh  main.cpp
game/include/: factories.h  game_loop.h  game_manager.h  game_state.h  objects.h  obstacle_manager.h
game/src/: cup.cpp  game_loop.cpp  game_manager.cpp  game_over.cpp  home_screen.cpp  obstacle.cpp  obstacle_manager.cpp  playing.cpp  renderable.cpp
